fixes alignment of status flags

--- a/style.css
+++ b/style.css
@@ -44,11 +44,16 @@
   font-family: var(--title-font);
 }
 
+.alert-type {
+  display: flex;
+  align-items: center;
+}
+
 .alert-status {
   margin-left: 1em;
   text-transform: uppercase;
   font-size: 0.6em;
-  padding: 2px 10px;
+  padding: 2.5px 10px;
   border-radius: 5px;
   margin-top: -5px;
   letter-spacing: 0.08em;
